# conterra

./: .gitignore  Cargo.toml
design/: deckbuilder-economy-concept.md  implementation-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  format.ts  hex.ts  index.css  selection.ts  store.ts  types.ts
frontend/src/components/: Board.tsx  Colony.tsx  HexTile.tsx  Lobby.tsx  MarketRow.tsx  ResultModal.tsx  Sidebar.tsx
src/: balance.rs  board.rs  game.rs  growth.rs  hex.rs  lib.rs  main.rs  market.rs  objectives.rs  protocol.rs  scoring.rs  server.rs  species.rs  terrain.rs
